--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,7 +1,13 @@
 <div class="container">
   <h5> Hi <%= @current_user.email %> </h5>
   <h4> Users </h4>
-  <%= render @users %>
-  <h4> Rooms </h4>
-  <%= render @rooms %>
+  <%= turbo_stream_from 'users' %>
+  <div id='users'>
+      <%= render @users %>
+  </div>
+  <%= turbo_stream_from 'rooms' %>
+  <div id='rooms'>
+      <%= render @rooms %>
+  </div>
+  <%= render 'layouts/new_room_form' %>
 </div>
